# cuRecon

./: CMakePresets.json  readme.md  vcpkg.json
PARENet/: .gitignore  README.md  requirements.txt
PARENet/dataset/: generate_views.py  tiff_to_pcl.ipynb
PARENet/experiments/3DMatch/: demo.py  model.py
PARENet/pareconv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PARENet/pareconv/utils/: data.py  open3d.py
include/app/: hdf5_handler.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  viewer.h
include/cuRecon/: quaternion.h
inference/: .gitignore  CMakeLists.txt  imgui.ini  readme.md
inference/include/app/: imgui_impl_glfw.h  input.h
inference/include/cuRecon/: pointcloud_processing.h  types.h
inference/shaders/: fragment_shader.glsl
inference/src/app/: hdf5_handler.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  input.cpp  main.cpp  viewer.cpp
shaders/: vertex_shader.glsl
src/app/: hdf5_handler.cpp  main.cpp
src/cuRecon/: pointcloud_processing.cu  quaternion.cpp
